<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <Button
        android:id="@+id/btnkayit_ol"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="280dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGiris_yap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sifre"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnGiris_yap"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="280dp"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnkayit_ol"
        app:layout_constraintTop_toBottomOf="@+id/sifre" />

    <EditText
        android:id="@+id/kullanici_adi"
        android:layout_width="375dp"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="text"
        android:padding="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sifre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:hint="@string/prompt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kullanici_adi" />

    <TextView
        android:id="@+id/sifremi_unuttum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="47dp"
        android:onClick="onClick"
        android:clickable="true"
        android:text="@string/forgot_pasword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGiris_yap" />

</androidx.constraintlayout.widget.ConstraintLayout>